Issue #27932: Prevent memory leak in win32_ver().